modified:   Member/Index.cshtml

--- a/Pages/Member/Index.cshtml
+++ b/Pages/Member/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "維清會員資料";
 }
 
-<h2>活動清單</h2>
+<h2>會員清單</h2>
 <div>
     <a href='/Member/memCreate'>[新增]</a>
     <form method="GET">
