調整頁面文字

--- a/Pages/Act/actDelete.cshtml
+++ b/Pages/Act/actDelete.cshtml
@@ -2,7 +2,7 @@
 @model ClientsCRUD.Pages.Act.actDeleteModel
 @{
 }
-<h2>刪除活動資料</h2>
+<h2>刪除活動</h2>
 @if (Model.errorMessage.Length > 0)
 {
     <div class='alert alert-warning alert-dismissible fade show' role='alert'>
