--- a/Pages/Act/actList.cshtml
+++ b/Pages/Act/actList.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ClientsCRUD.Pages.Act.actListModel
 @{
-    ViewData["Title"] = "活動清單";
+    ViewData["Title"] = "活動資料";
 }
 
 <h2>活動清單</h2>
