--- a/Pages/Clients/Create.cshtml
+++ b/Pages/Clients/Create.cshtml
@@ -2,7 +2,7 @@
 @model ClientsCRUD.Pages.Clients.CreateModel
 @{
 }
-<h2>Add New Client</h2>
+<h2>新增客戶</h2>
 
 @if (Model.errorMessage.Length > 0)
 {
