--- a/Pages/Clients/Delete.cshtml
+++ b/Pages/Clients/Delete.cshtml
@@ -2,7 +2,7 @@
 @model ClientsCRUD.Pages.Clients.DeleteModel
 @{
 }
-<h2>Delete Client</h2>
+<h2>刪除客戶</h2>
 @if (Model.errorMessage.Length > 0)
 {
     <div class='alert alert-warning alert-dismissible fade show' role='alert'>
