--- a/Pages/Clients/Edit.cshtml
+++ b/Pages/Clients/Edit.cshtml
@@ -2,7 +2,7 @@
 @model ClientsCRUD.Pages.Clients.EditModel
 @{
 }
-<h2>Edit Client</h2>
+<h2>編輯客戶</h2>
 @if (Model.errorMessage.Length > 0)
 {
     <div class='alert alert-warning alert-dismissible fade show' role='alert'>
