--- a/Pages/Clients/Index.cshtml
+++ b/Pages/Clients/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ClientsCRUD.Pages.Clients.IndexModel
 @{
-    ViewData["Title"] = "客戶清單";
+    ViewData["Title"] = "客戶資料";
 }
 
 <h2>客戶清單</h2>
