修改活動管理相關頁面 1.活動清單 : 補上 顯示活動起始時間、結束時間 (只顯示日期) 2.新增活動 : 補上 輸入活動起始時間、結束時間 3.編輯活動 : 帶入 原始活動起始時間、結束時間，並可編輯 4.調整UI介面 : 輸入活動起始/結束時間欄位，使用日曆介面點選
	modified:   Pages/Act/actAdd.cshtml
	modified:   Pages/Act/actAdd.cshtml.cs
	modified:   Pages/Act/actEdit.cshtml
	modified:   Pages/Act/actEdit.cshtml.cs
	modified:   Pages/Act/actList.cshtml
	modified:   Pages/Act/actList.cshtml.cs
	modified:   Pages/Act/actRegList.cshtml.cs

--- a/Pages/Act/actEdit.cshtml
+++ b/Pages/Act/actEdit.cshtml
@@ -38,6 +38,18 @@
             <input type="text" class="form-control" name="actLocation" value="@Model.cInfo.actLocation" />
         </div>
     </div>
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">活動開始時間</label>
+        <div class="col-sm-6">
+            <input type="date" class="form-control" name="actStart" value="@Model.cInfo.actStart" />
+        </div>
+    </div>
+    <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">活動結束時間</label>
+        <div class="col-sm-6">
+            <input type="date" class="form-control" name="actEnd" value="@Model.cInfo.actEnd" />
+        </div>
+    </div>
 
     @if (Model.succMessage.Length > 0)
     {
