完成[會員管理]>[編輯會員]功能

--- a/Pages/Member/Index.cshtml
+++ b/Pages/Member/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@page
 @model ClientsCRUD.Pages.Member.IndexModel
 @{
-    ViewData["Title"] = "維清會員資料";
+    ViewData["Title"] = "會員資料";
 }
 
 <h2>會員清單</h2>
 <div>
-    <a href='/Member/memCreate'>[新增]</a>
+    <a href='/Member/Create'>[新增]</a>
     <form method="GET">
         <div class="row mb-1">
             <div class="col-sm-2">
@@ -45,7 +45,7 @@
     </thead>
     <tbody>
 
-        @foreach (var item in Model.listMem)
+        @foreach (var item in Model.listMembers)
         {
             <tr>
                 <td>@item.memID</td>
@@ -57,13 +57,13 @@
     <td>@item.mDate</td>
     -->
                 <td>
-                    <a class="btn btn-primary btn-sm" href="/Act/actEdit?id=@item.memID">Edit</a>
-                    <a class="btn btn-danger btn-sm" href="/Act/actDelete?id=@item.memID">Delete</a>
+                    <a class="btn btn-primary btn-sm" href="/Member/Edit?id=@item.memID">Edit</a>
+                    <a class="btn btn-danger btn-sm" href="/Member/Delete?id=@item.memID">Delete</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
-<p> 總共有 @Model.records 筆資料, 其中符合查詢條件的有 @Model.listMem.Count 筆。 </p>
+<p> 總共有 @Model.records 筆資料, 其中符合查詢條件的有 @Model.listMembers.Count 筆。 </p>
 
 
