解bug (打錯字) name="phome"

--- a/Pages/Member/Create.cshtml
+++ b/Pages/Member/Create.cshtml
@@ -25,7 +25,7 @@
     <div class="row mb-3">
         <label class="col-sm-3 col-form-label">會員電話</label>
         <div class="col-sm-6">
-            <input type="text" class="form-control" name="phome" value="@Model.mInfo.memPhone"/>
+            <input type="text" class="form-control" name="phone" value="@Model.mInfo.memPhone"/>
         </div>
     </div>
     <div class="row mb-3">
