--- a/Pages/Member/Edit.cshtml
+++ b/Pages/Member/Edit.cshtml
@@ -35,6 +35,12 @@
         </div>
     </div>
     <div class="row mb-3">
+        <label class="col-sm-3 col-form-label">會員生日</label>
+        <div class="col-sm-6">
+            <input type="date" class="form-control" name="birth" value="@Model.mInfo.memBirth" />
+        </div>
+    </div>
+    <div class="row mb-3">
         <label class="col-sm-3 col-form-label">會員備註</label>
         <div class="col-sm-6">
             <input type="text" class="form-control" name="remark" value="@Model.mInfo.memRemark" />
