--- a/Pages/Member/Index.cshtml
+++ b/Pages/Member/Index.cshtml
@@ -35,6 +35,7 @@
             <th>會員名稱</th>
             <th>會員電話</th>
             <th>會員Email</th>
+            <th>會員生日</th>
             <th>會員備註</th>
             <!--
     <th>開始時間</th>
@@ -52,6 +53,7 @@
                 <td>@item.memName</td>
                 <td>@item.memPhone</td>
                 <td>@item.memEmail</td>
+                <td>@item.memBirth</td>
                 <td>@item.memRemark</td>
                 <!--
     <td>@item.mDate</td>
