修改 welcome page

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,10 +2,14 @@
 @model IndexModel
 @{
     Layout = "_Layout";
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "首頁";
 }
 
 <div class="text-center">
+    <!--
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p><img src="https://raw.githubusercontent.com/kikopapa/kikopapa.github.io/main/2701261.jpg" style="border-radius: 50%" /></p>
+    -->
+    <p><img src="https://raw.githubusercontent.com/kikopapa/kikopapa.github.io/main/2701261.jpg" width="1000" /></p>
 </div>
