--- a/Pages/Shared/_LayoutGuest.cshtml
+++ b/Pages/Shared/_LayoutGuest.cshtml
@@ -3,27 +3,34 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ClientsCRUD</title>
+    <title>@ViewData["Title"] - 會員活動管理系統</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ClientsCRUD.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
+            <!--
+                navbar-dark bg-dark
+                navbar-light bg-white
+                //.navbar-light 選用淺色背景顏色， .navbar-dark 用於深色背景顏色。 然後，使用 .bg-* 通用類別自訂
+            -->
+            
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">ClientsCRUD</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">會員活動管理系統</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+             
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Index">首頁</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Login">登入/註冊</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Login">登入/註冊</a>
                         </li>
                     </ul>
                 </div>
