--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                             <a class="nav-link text-white" asp-area="" asp-page="/Act/actRegList">活動報名</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-page="/Mail/SendMail">SendMail</a>
+                            <a class="nav-link text-white" asp-area="" asp-page="/Mail/SendMail">發送訊息</a>
                         </li>
                     </ul>
                 </div>
