--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -1,13 +1,13 @@
 ﻿@page
 @model ClientsCRUD.Pages.LoginModel
 @{
-    ViewData["Title"] = "Log in";
+    ViewData["Title"] = "會員登入";
 }
 
-<h2>@ViewData["Title"]</h2>
+<h2>會員登入</h2>
 <div class="row">
     <div class="col-md-8">
-        <form method="post">
+        <form method="POST">
             <h4>Use a local account to log in.</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-default">Log in</button>
+                <button type="submit" class="btn btn-default">登入</button>
             </div>
             <div class="form-group">
                 <p>
